manifests/Inactive/duplicati/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: duplicati
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
    # metallb.universe.tf/allow-shared-ip: "192.168.86.220"
  creationTimestamp: null
  labels:
    io.kompose.service: duplicati
  name: duplicati
spec:
  # type: LoadBalancer
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      protocol: TCP
  selector:
    io.kompose.service: duplicati
